--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,5 +22,11 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+        stage('Complete') {
+            steps {
+                echo "Build is completed OK JTM"
+            }
+        }
+        
     }
 }
